fixed game over screen

--- a/Blockudoku/style.css
+++ b/Blockudoku/style.css
@@ -81,3 +81,47 @@ body {
     margin-right: 4px;
 }
 
+#gameover-container {
+    display: none;
+    width: 426px;
+    height: 600px;
+    margin: 30px auto ;
+    border-radius: 10px;
+    background: linear-gradient(to right, #3564C3, #1b75d6);
+    flex-direction: column;
+    align-items: center;
+}
+
+#gameover-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #F2F5F8;
+    font-size: 32px;
+    font-weight: bold;
+    margin-top: 30px;
+    letter-spacing: 1px;
+}
+
+#miniature-grid {
+    margin-top: 30px;
+    border-radius: 10px;
+    border: 10px solid #F2F5F8;
+    background: #F2F5F8;
+
+}
+
+#new-game {
+    width: 250px;
+    border-radius: 25px;
+    background: #F2F5F8;
+    border: none;
+    margin-top: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #3564C3;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
