--- a/elCuervo/style.css
+++ b/elCuervo/style.css
@@ -26,8 +26,8 @@ section {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: #1E1617;
     display: flex;
     justify-content: center;
@@ -210,6 +210,8 @@ section {
   #egypt-background {
     overflow: hidden;
     position: absolute;
+    width: 100dvw;
+    height: 100dvh;
   }
 
   #acasa {
